# networkx-linegraph

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/networkx_linegraph/: __about__.py  __init__.py  __init__.pyi  _linegraph.py
tests/: __init__.py  test_linegraph.py
